--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
       }
   
       .navbar .nav-link {
-        color: #000 !important;
+        color: #fff !important;
       }
 
       #three-container {
@@ -56,4 +56,82 @@ body {
         height: 100vh;
         margin-top: -58.59px;
         z-index: -1;
+        color: #000;
       }
+
+      body {
+        background-color: #333;
+        color: #ccc;
+        text-align: center;
+    }
+    body a, body a:visited {
+        color: #ccc;
+        text-decoration: none;
+    }
+    body a:hover {
+        color: #aaa;
+    }
+    .fade-wrapper {
+        position: relative;
+        width: 480px;
+        margin: auto;
+    }
+    .fade-text {
+        display: block;
+        color: transparent;
+        font-size: 30px;
+        line-height: 1.4;
+        margin-bottom: 40px;
+        background-clip: text;
+        -webkit-background-clip: text;
+        background-size: 300% 300%;
+    }
+    .fade-text.to__right {
+        background-image: linear-gradient(to right, #fff 30%, rgba(255, 255, 255, 0) 60%);
+        background-position: left 100% center;
+        transform: translate(-20px, 0);
+        animation: toRight var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
+    }
+    .fade-text.to__left {
+        background-image: linear-gradient(to left, #fff 30%, rgba(255, 255, 255, 0) 60%);
+        background-position: right 100% center;
+        transform: translate(20px, 0);
+        animation: toLeft var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
+    }
+    .fade-text.to__top {
+        background-image: linear-gradient(to top, #fff 30%, rgba(255, 255, 255, 0) 50%);
+        background-position: center 0;
+        transform: translate(0, 20px);
+        animation: toTop var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
+    }
+    .fade-text.to__bottom {
+        background-image: linear-gradient(to bottom, #fff 30%, rgba(255, 255, 255, 0) 50%);
+        background-position: center 100%;
+        transform: translate(0, -20px);
+        animation: toBottom var(--duration, 2.4s) var(--ease) var(--delay, 0.6s) forwards;
+    }
+    @keyframes toRight {
+        100% {
+            transform: translate(0, 0);
+            background-position: left 0% center;
+        }
+    }
+    @keyframes toLeft {
+        100% {
+            transform: translate(0, 0);
+            background-position: right 0% center;
+        }
+    }
+    @keyframes toBottom {
+        100% {
+            transform: translate(0, 0);
+            background-position: center 0%;
+        }
+    }
+    @keyframes toTop {
+        100% {
+            transform: translate(0, 0);
+            background-position: center 100%;
+        }
+    }
+    
