--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,9 @@ body {
         z-index: -1;
         color: #000;
       }
+      footer{
+        color: #000;
+      }
 
       body {
         background-color: #333;
