--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
       }
 
       #maintenance_intro {
-        background-image: url(30015512-7ead-4a0c-aa67-a354a7e9c333.png);
+        background-image: url(../img/30015512-7ead-4a0c-aa67-a354a7e9c333.png);
         height: 100vh;
       }
 
