--- a/css/footer.css
+++ b/css/footer.css
@@ -10,7 +10,7 @@ a {
   hr {
     height: 1px;
     border: 0;
-    border-top: 1px solid #e5e7eb;
+    border-top: 1px solid #1f222a;
   }
   
   .grid {
