--- a/css/top/import.css
+++ b/css/top/import.css
@@ -2,5 +2,7 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 @import url("lib/bxslider/jquery.bxslider.min.css");
 @import url("flickity.css");
+@import url("slider.css");
 @import url("style.css");
+@import url("news.css");
 @import url("footer.css");
