--- a/css/top/style.css
+++ b/css/top/style.css
@@ -5,6 +5,7 @@ html, body {
   line-height: 1.5;
   height: 100%;
   background: #ECF0F3;
+  max-width: 1920px;
 }
 nav.navbar {
   border-top: 4px solid #276cda;
